--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             if (i === 0) {
                 arrivals_html += '<h1 class="cover-heading">' + mins + ' mins</h1>'
             } else {
-                arrivals_html += '<p>' + mins + ' mins</p>'
+                arrivals_html += '<div class="secondary-item">' + mins + ' mins</div>'
             }
         });
 
@@ -92,7 +92,7 @@
             if (i === 0) {
                 arrivals_html += '<h1 class="cover-heading">' + mins + ' mins</h1>'
             } else {
-                arrivals_html += '<p>' + mins + ' mins</p>'
+                arrivals_html += '<div class="secondary-item">' + mins + ' mins</div>'
             }
         });
 
